<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/profile_selector"/>

    <item
        android:id="@+id/discoverFragment"
        android:title="@string/discover"
        android:icon="@drawable/discover_selector"/>

    <item
        android:id="@+id/reelsFragment"
        android:title="@string/reels"
        android:icon="@drawable/reels_selector"/>

    <item
        android:id="@+id/inboxFragment"
        android:title="@string/inbox"
        android:icon="@drawable/inbox_selector"/>

    <item
        android:id="@+id/settingFragment"
        android:title="@string/setting"
        android:icon="@drawable/settings_selector"/>
</menu>